tests/org.eclipse.php.core.tests/workspace/errors/php7/spaceshipOperator01.pdtt.disabled
--TEST--
Test spaceship operator
--FILE--
<?php
const BAR = $var1 <=> $this->field;
--EXPECT--
[line=2, start=18, end=23] syntax error, unexpected '$var1', expecting '::'